Changes in version 1.7.2 beta (2009-01-08):
--------------------------------------------
- Reverted ability to print using wxGraphicsCanvas due to crash on Linux. Now only standard GDI functions are used.

Changes in version 1.7.1 beta (2008-12-20):
--------------------------------------------
- Switched to use wxXmlSerializer 1.1.9:
  - Added functions xsSerializable::GetFirstChild(wxClassInfo *type), xsSerializable::GetLastChild(wxClassInfo *type), xsSerializable::GetSibbling(wxClassInfo *type).
  - Changed declaration of xsSerializable::GetChildrenRecursively(wxClassInfo *type, SerializableList& list) function to
    xsSerializable::GetChildrenRecursively(wxClassInfo *type, SerializableList& list, SEARCHMODE mode), where 'mode' parameter can be 'searchDFS' for Depth-First-Search
    or 'searchBFS' for Breadth-First-Search algorithm. The 'searchBFS' is default.
  - Changed declaration of wxXmlSerializer::GetItems(wxClassInfo* type, SerializableList& list) function to wxXmlSerializer::GetItems(wxClassInfo* type, SerializableList& list,
    xsSerializable::SEARCHMODE mode = xsSerializable::searchBFS).

- Significant speed improvements and optimizations in shape canvas and diagram manager. These improvements required some small
  API changes; see the lines bellow for more information.
- Changed declaration of wxSFDiagramManager::GetShapes(ShapeList& shapes) function to wxSFDiagramManager::GetShapes(wxClassInfo* shapeInfo, ShapeList& shapes 
  xsSerializable::SEARCHMODE mode = xsSerializable::searchBFS).
- Changed declaration of wxSFShapeBase::GetChildShapes(ShapeList& children, bool recursive = false) to wxSFShapeBase::GetChildShapes(wxClassInfo *type, ShapeList& children,
  bool recursive = false, xsSerializable::SEARCHMODE mode = xsSerializable::searchBFS).
- Functions wxSFDiagramManager::GetAssignedConnections, wxSFDiagramManager::GetShapes, wxSFDiagramManager::GetShapesAtPosition,