@@ -1,6 +1,7 @@
 Changes in version 1.7.2 beta (2009-01-08):
 --------------------------------------------
-- Reverted ability to print using wxGraphicsCanvas due to crash on Linux. Now only standard GDI functions are used.
+- Virtual function wxSFShapeBase::OnChildDropped() is now called even for child shapes dropped via Drag&Drop operation.
+- Disabled ability to print using wxGraphicsCanvas (due to crash) on Linux. Now only standard GDI functions are used there.
 
 Changes in version 1.7.1 beta (2008-12-20):
 --------------------------------------------
